<resources>
    <string name="app_name">NekoList - a Shopping List App</string>

    <string name="log_in_prompt">Log In or Create an Account</string>
    <string name="log_in_button">Log In</string>
    <string name="create_account_button">Create Account</string>
    <string name="user_name_label">User Name</string>
    <string name="password_label">Password</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_lists">Shopping Lists</string>
    <string name="title_activity_items">List Items</string>

    <string name="action_add_list">Add List</string>
    <string name="action_add_item">Add Item</string>

    <string name="add_list_dialog_button">Add List</string>
    <string name="add_list_dialog_title">Add a New Shopping List</string>

    <string name="add_item_dialog_button">Add List Item</string>
    <string name="add_item_dialog_title">Add a New Shopping List Item</string>
    <string name="edit_list_button">Edit</string>
    <string name="delete_list_button">Delete</string>
    <string name="editing">Editing</string>
    <string name="update_list_dialog_button">Update Shopping List</string>
</resources>
